--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -499,7 +499,7 @@
 /* Phần container */
 .container {
     display: block;
-    background-color: white
+    background-color: white;
     padding-bottom: 50px;
 }
 
